clients/ffi/include/tarwyn.h

typedef struct Handle Handle;
int xt_get_double(const struct Handle *handle, const char *channel, double *out);
int xt_get_float(const struct Handle *handle, const char *channel, float *out);
int xt_get_boolean(const struct Handle *handle, const char *channel, bool *out);
int xt_put_string_list(const struct Handle *handle,
                       const char *channel,
                       const uint8_t *packed,
                       size_t packed_len);
int xt_get_string_list(const struct Handle *handle,
                       const char *channel,
                       uint8_t *out,
                       size_t capacity,
                       size_t *out_len);
int xt_put_bytes_list(const struct Handle *handle,
                      const char *channel,
                      const uint8_t *packed,
                      size_t packed_len);
int xt_get_bytes_list(const struct Handle *handle,
                      const char *channel,
                      uint8_t *out,
                      size_t capacity,
                      size_t *out_len);