clients/java-client/gen/tarwyn/ffi/tarwyn_h.java


    /**
     * {@snippet lang=c :
     * int xt_get_double(const struct Handle *handle, const char *channel, double *out)
     * }
     */
    public static int xt_get_double(MemorySegment handle, MemorySegment channel, MemorySegment out) {
        var mh$ = xt_get_double.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_double", handle, channel, out);
            }
            return (int)mh$.invokeExact(handle, channel, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_float {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_float");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_float(const struct Handle *handle, const char *channel, float *out)
     * }
     */
    public static FunctionDescriptor xt_get_float$descriptor() {
        return xt_get_float.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_float(const struct Handle *handle, const char *channel, float *out)
     * }
     */
    public static MethodHandle xt_get_float$handle() {
        return xt_get_float.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_float(const struct Handle *handle, const char *channel, float *out)
     * }
     */
    public static MemorySegment xt_get_float$address() {
        return xt_get_float.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_get_float(const struct Handle *handle, const char *channel, float *out)
     * }
     */
    public static int xt_get_float(MemorySegment handle, MemorySegment channel, MemorySegment out) {
        var mh$ = xt_get_float.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_float", handle, channel, out);
            }
            return (int)mh$.invokeExact(handle, channel, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_boolean {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_boolean");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_boolean(const struct Handle *handle, const char *channel, bool *out)
     * }
     */
    public static FunctionDescriptor xt_get_boolean$descriptor() {
        return xt_get_boolean.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_boolean(const struct Handle *handle, const char *channel, bool *out)
     * }
     */
    public static MethodHandle xt_get_boolean$handle() {
        return xt_get_boolean.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_boolean(const struct Handle *handle, const char *channel, bool *out)
     * }
     */
    public static MemorySegment xt_get_boolean$address() {
        return xt_get_boolean.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_get_boolean(const struct Handle *handle, const char *channel, bool *out)
     * }
     */
    public static int xt_get_boolean(MemorySegment handle, MemorySegment channel, MemorySegment out) {
        var mh$ = xt_get_boolean.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_boolean", handle, channel, out);
            }
            return (int)mh$.invokeExact(handle, channel, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_put_string_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_put_string_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_put_string_list(const struct Handle *handle, const char *channel, const uint8_t *packed, size_t packed_len)
     * }
     */
    public static FunctionDescriptor xt_put_string_list$descriptor() {
        return xt_put_string_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_put_string_list(const struct Handle *handle, const char *channel, const uint8_t *packed, size_t packed_len)
     * }
     */
    public static MethodHandle xt_put_string_list$handle() {
        return xt_put_string_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_put_string_list(const struct Handle *handle, const char *channel, const uint8_t *packed, size_t packed_len)
     * }
     */
    public static MemorySegment xt_put_string_list$address() {
        return xt_put_string_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_put_string_list(const struct Handle *handle, const char *channel, const uint8_t *packed, size_t packed_len)
     * }
     */
    public static int xt_put_string_list(MemorySegment handle, MemorySegment channel, MemorySegment packed, long packed_len) {
        var mh$ = xt_put_string_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_put_string_list", handle, channel, packed, packed_len);
            }
            return (int)mh$.invokeExact(handle, channel, packed, packed_len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_string_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_string_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_string_list(const struct Handle *handle, const char *channel, uint8_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static FunctionDescriptor xt_get_string_list$descriptor() {
        return xt_get_string_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_string_list(const struct Handle *handle, const char *channel, uint8_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MethodHandle xt_get_string_list$handle() {
        return xt_get_string_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_string_list(const struct Handle *handle, const char *channel, uint8_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MemorySegment xt_get_string_list$address() {
        return xt_get_string_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_get_string_list(const struct Handle *handle, const char *channel, uint8_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static int xt_get_string_list(MemorySegment handle, MemorySegment channel, MemorySegment out, long capacity, MemorySegment out_len) {
        var mh$ = xt_get_string_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_string_list", handle, channel, out, capacity, out_len);
            }
            return (int)mh$.invokeExact(handle, channel, out, capacity, out_len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_put_bytes_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_put_bytes_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_put_bytes_list(const struct Handle *handle, const char *channel, const uint8_t *packed, size_t packed_len)
     * }
     */
    public static FunctionDescriptor xt_put_bytes_list$descriptor() {
        return xt_put_bytes_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_put_bytes_list(const struct Handle *handle, const char *channel, const uint8_t *packed, size_t packed_len)
     * }
     */
    public static MethodHandle xt_put_bytes_list$handle() {
        return xt_put_bytes_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_put_bytes_list(const struct Handle *handle, const char *channel, const uint8_t *packed, size_t packed_len)
     * }
     */
    public static MemorySegment xt_put_bytes_list$address() {
        return xt_put_bytes_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_put_bytes_list(const struct Handle *handle, const char *channel, const uint8_t *packed, size_t packed_len)
     * }
     */
    public static int xt_put_bytes_list(MemorySegment handle, MemorySegment channel, MemorySegment packed, long packed_len) {
        var mh$ = xt_put_bytes_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_put_bytes_list", handle, channel, packed, packed_len);
            }
            return (int)mh$.invokeExact(handle, channel, packed, packed_len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_bytes_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_bytes_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
